methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:60: error: illegal start of simple expression
  motif1(Color.ORANGE , )Color.BLUE)
                        ^FlowerCase:66: error: ')' expected but '}' found.
} 
^